# GIAIC-Q4

Agentic AI Q4/Class Code/Class-10 (29-Auguest-2025)/: pyproject.toml  tool_use_behaver_excel.docx
Agentic AI Q4/Class Code/Class-2/: text
Agentic AI Q4/Class Code/Class-2 (30 May 2025)/: text
Agentic AI Q4/Class Code/Class-3/: chainlit.py  hello.py  pyproject.toml  tool.py
Agentic AI Q4/Class Code/Class-3 (20 Jun 2025)/: .gitignore  chainlit.py  hello.py  tool.py
Agentic AI Q4/Class Code/Class-4/: main.py  pyproject.toml  runStremd.py  tool.py
Agentic AI Q4/Class Code/Class-4 (11 july 2025)/: main.py  runStremd.py  tool.py
Agentic AI Q4/Class Code/Class-5/: .gitignore
Agentic AI Q4/Class Code/Class-5 (18 July 2025 )/: embeding-openai.py  gemini_pdf.py  handoffs.py  pyproject.toml  ~$ass-5 excel.docx
Agentic AI Q4/Class Code/Class-5 (18 July 2025)/: .gitignore  Class-5 excel.docx  embeding-openai.py  gemini_pdf.py  handoffs.py  pyproject.toml  ~$ass-5 excel.docx
Agentic AI Q4/Class Code/Class-6/: Output_g.py  context.py  main.py  (+2 more)
Agentic AI Q4/Class Code/Class-6 (25 July 2025)/: .gitignore  Output_g.py  context.py  input_g.py  main.py
Agentic AI Q4/Self_Practise/m.y/multi_agents/: .env  pyproject.toml
Agentic AI Q4/Self_Practise/m.y/multi_agents/src/multi_agents/: main.py
Agentic AI Q4/Self_Practise/m.y/simple-agents/: chatbot.py  pyproject.toml
Agentic AI Q4/Self_Practise/m.y/simple-agents/.@Z-pdf-this-class/: M.Y Agents simple.docx  ~$Y Agents simple.docx
Agentic AI Q4/Self_Practise/m.y/simple-agents/src/simple_agents/: __init__.py  main.py
(+122 files in other folders)
