[project]
name = "simple-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "AsmaAkbar88", email = "164855203+AsmaAkbar88@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "chainlit>=2.6.0",
    "dotenv>=0.9.9",
    "openai-agents>=0.1.0",
]

[project.scripts]
simple-agents = "simple_agents:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
